implement new elapsed time display mode

--- a/Blubb/de.lproj/Localizable.strings
+++ b/Blubb/de.lproj/Localizable.strings
@@ -19,3 +19,5 @@
 "Save" = "Speichern";
 "Created with Blubb." = "Erstellt mit Blubb.";
 "%d minutes" = "%d Minuten";
+"Show remaining time" = "Zeige verbleibende Zeit";
+"Show elapsed time" = "Zeige abgelaufene Zeit";
