--- a/Blubb/Base.lproj/Localizable.strings
+++ b/Blubb/Base.lproj/Localizable.strings
@@ -19,3 +19,5 @@
 "Save" = "Save";
 "Created with Blubb." = "Created with Blubb.";
 "%d minutes" = "%d minutes";
+"Show remaining time" = "Show remaining time";
+"Show elapsed time" = "Show elapsed time";
